# ChangeLog for sci-libs/liborigin
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/liborigin/ChangeLog,v 1.1 2006/11/07 20:23:52 george Exp $

*liborigin-20060616 (07 Nov 2006)

  07 Nov 2006; George Shapovalov <george@gentoo.org>
  +liborigin-20060616.ebuild:
  first commit. This is the library necessary for qtiplot, new version of
  which (0.8.8) should be upcoming soon.
