@@ -1,0 +1,3 @@
+MD5 5ed1c7c0955f935d3b4e45fb25e1d7fc liborigin-20070115.tgz 20308
+RMD160 6531fb562e390a4a9afc64f56af78ce7b8316e10 liborigin-20070115.tgz 20308
+SHA256 125de16ffc055102bd0aaf31de71ad5daeefc962aea97723b75611800f9ecd38 liborigin-20070115.tgz 20308
